fixed some text alignment issues

--- a/src/stylesheets/media-queries.scss
+++ b/src/stylesheets/media-queries.scss
@@ -99,6 +99,7 @@
           font-size: 1.3em;
           margin: 0 auto 8px;
           text-align: center;
+          width: 77%;
         }
       }
 
@@ -220,7 +221,7 @@
 
         p {
           font-size: 1em;
-          text-align: left;
+          text-align: center;
         }
         
       }
@@ -310,6 +311,7 @@
         }
 
         p {
+          text-align: left;
           width: 80%;
           margin: 0;
           margin-bottom: 8px;
